--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "pretest": "standard",
     "test": "npm run test:main && npm run test:renderer",
-    "test:main": "node bin/electron-mocha test/main",
-    "test:renderer": "node bin/electron-mocha --config .mocharc.renderer.json test/renderer",
-    "mocha": "node bin/electron-mocha",
+    "test:main": "node bin/electron-mocha.js test/main",
+    "test:renderer": "node bin/electron-mocha.js --config .mocharc.renderer.json test/renderer",
+    "mocha": "node bin/electron-mocha.js",
     "prepublishOnly": "npm test"
   },
   "mocha": {
@@ -21,7 +21,7 @@
     ]
   },
   "bin": {
-    "electron-mocha": "./bin/electron-mocha"
+    "electron-mocha": "bin/electron-mocha.js"
   },
   "engines": {
     "node": ">= 7.0.0"
@@ -56,10 +56,23 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "electron": "^16.0.2",
-    "standard": "^17.0.0-2"
+    "electron": "^16.2.8",
+    "path-browserify": "^1.0.1",
+    "standard": "^17.0.0-2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "standard": {
-    "envs": ["mocha"]
+    "envs": [
+      "mocha"
+    ]
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "browser": {
+    "child_process": false,
+    "fs": false
   }
 }
