--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "electron-mocha",
   "version": "11.0.2",
   "description": "Mocha tests in Electron.",
-  "main": "lib/main.js",
+  "main": "dist/bin/electron-mocha.js",
+  "type": "module",
   "scripts": {
     "pretest": "standard",
     "test": "npm run test:main && npm run test:renderer",
     "test:main": "node bin/electron-mocha.js test/main",
     "test:renderer": "node bin/electron-mocha.js --config .mocharc.renderer.json test/renderer",
     "mocha": "node bin/electron-mocha.js",
-    "prepublishOnly": "npm test"
+    "prepublishOnly": "npm test",
+    "build": "rm -rf dist/ && mkdir dist && cp -rf renderer dist/renderer && cp -rf lib dist/lib && cp -rf bin dist/bin"
   },
   "mocha": {
     "color": true,
@@ -56,7 +58,9 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
-    "electron": "^16.2.8",
+    "electron": "^22.1.0",
+    "electron-prebuilt": "^1.4.13",
+    "file-loader": "^6.2.0",
     "path-browserify": "^1.0.1",
     "standard": "^17.0.0-2",
     "webpack": "^5.75.0",
